--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ html{
   padding: 15px 0;
   background: #5d8bf4;
 }
-
 .navbar .max-width {
   display: flex;
   align-items: center;
@@ -521,6 +520,14 @@ display: flex;
   cursor: pointer;
   transition: all 0.3s ease;
 }
+ .link {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   top: 0;
+   left: 0;
+   z-index: 1;
+ }
 .contact .right form .button button:hover{
   color: #5d8bf4;
   background:none;
