--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html{
 }
 .sticky {
   padding: 15px 0;
-  background: #5d8bf4;
+  background: #61677A;
 }
 .navbar .max-width {
   display: flex;
@@ -37,7 +37,7 @@ html{
   font-size: 35px;
 }
 .navbar .logo a span {
-  color: #5d8bf4;
+  color: #61677A;
   transition: all 0.3s ease;
 }
 .sticky .logo a span {
@@ -56,7 +56,7 @@ html{
   transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-  color: #5d8bf4;
+  color: #61677A;
 }
 .sticky .menu li a:hover {
   color: #fff;
@@ -73,7 +73,7 @@ html{
 
 .scroll-up-btn{
   position:fixed;
-  background: #5d8bf4;
+  background: #61677A;
   height: 45px;
   width: 40px;
   right: 30px;
@@ -99,7 +99,7 @@ html{
 
 .home {
   display: flex;
-  background: url(/Images/Black.jpg) no-repeat center;
+  background: url(/Images/Black.gif) no-repeat center;
   height: 100vh;
   background-size: cover;
   background-attachment: fixed;
@@ -124,13 +124,13 @@ html{
 }
 .home .home-content a {
   display: inline-block;
-  background-color: #5d8bf4;
+  background-color: #61677A;
   color: #fff;
   margin: 25px 10px 10px 0px;
   padding: 15px 20px;
   font-size: 23px;
   border-radius: 10px;
-  border: #5d8bf4 solid;
+  border: #61677A solid;
   transition: all 0.3s ease;
 }
 .home .home-content a:hover {
@@ -138,7 +138,7 @@ html{
   background: none;
 }
 .home .home-content .text-3 span {
-  color: #5d8bf4;
+  color: #61677A;
   font-weight: 500;
 }
 
@@ -167,7 +167,7 @@ section .title::before {
 section .title::after {
   position: absolute;
   font-size: 20px;
-  color: #5d8bf4;
+  color: #61677A;
   padding: 5px;
   bottom: -8px;
   left: 45.5%;
@@ -216,7 +216,7 @@ section {
   text-align: justify;
 }
 .about .about-content .right .text span {
-  color: #5d8bf4;
+  color: #61677A;
 }
 
 /* My knowladge section styling */
@@ -257,14 +257,14 @@ section {
   transform: scale(1.05);
 }
 .knowladge .knowladge-content .cards:hover {
-  background-color: #5d8bf4;
+  background-color: #61677A;
 }
 .knowladge .knowladge-content .cards:hover i {
   color: #fff;
 }
 .knowladge .knowladge-content .cards i {
   font-size: 40px;
-  color: #5d8bf4;
+  color: #61677A;
   transition: all 0.3s ease;
 }
 .knowladge .knowladge-content .cards .text {
@@ -301,17 +301,17 @@ section {
 }
 .skills .skill-content .left a{
   display: inline-block;
-  background: #5d8bf4;
+  background: #61677A;
   color: #fff;
   margin: 25px 10px 10px 0px;
   padding: 8px 13px;
   font-size: 15px;
   border-radius: 10px;
-  border: #5d8bf4 solid;
+  border: #61677A solid;
   transition: all 0.3s ease;
 }
 .skills .skill-content .left a:hover{
-  color: #5d8bf4;
+  color: #61677A;
   background: none;
 }
 .skills .skill-content .right .bars{
@@ -337,7 +337,7 @@ section {
   content: "";
   height: 100%;
   position: absolute;
-  background: #5d8bf4;
+  background: #61677A;
   left: 0;
   top: 0;
 }
@@ -386,7 +386,7 @@ transition: all 0.3s ease;
   transform: scale(1.05);
 }
 .projects .carousel .card:hover{
-  background: #5d8bf4;
+  background: #61677A;
 }
 .projects .carousel .card .text{
   font-size: 25px;
@@ -398,7 +398,7 @@ transition: all 0.3s ease;
  width: 150px;
  object-fit: cover;
  border-radius: 50%;
- border: 5px solid #5d8bf4;
+ border: 5px solid #61677A;
  transition: all 0.3s ease;
 
 }
@@ -416,7 +416,7 @@ transition: all 0.3s ease;
   outline: none!important;
   margin: 0px 5px;
   border-radius: 50%;
-  border: 2px solid #5d8bf4!important;
+  border: 2px solid #61677A!important;
   transition: all 0.3s ease;
 }
 .owl-dot.active{
@@ -424,7 +424,7 @@ transition: all 0.3s ease;
   border-radius: 14px;
 }
 .owl-dot.active,.owl-dot:hover{
-   background: #5d8bf4!important;
+   background: #61677A!important;
 }
 
 /* contact styling */
@@ -461,7 +461,7 @@ text-align: justify;
 }
 .contact .contact-content .info i{
   font-size: 25px;
-  color: #5d8bf4;
+  color: #61677A;
 }
 .contact .contact-content .info .head{
 font-weight: 500;
@@ -511,8 +511,8 @@ display: flex;
 .contact .right form .button button{
   height: 100%;
   width: 100%;
-  border: 2px solid #5d8bf4;
-  background:#5d8bf4 ;
+  border: 2px solid #61677A;
+  background:#61677A ;
   color: #fff;
   font-size: 20px;
   font-weight: 500;
@@ -529,7 +529,7 @@ display: flex;
    z-index: 1;
  }
 .contact .right form .button button:hover{
-  color: #5d8bf4;
+  color: #61677A;
   background:none;
 }
 
@@ -546,7 +546,7 @@ footer{
 }
 
 footer span a{
-  color: #5d8bf4;
+  color: #61677A;
 }
 
 footer span a:hover{
@@ -578,7 +578,7 @@ footer span a:hover{
   }
   .home .home-content a {
     display: inline-block;
-    background-color: #5d8bf4;
+    background-color: #61677A;
     color: #fff;
     margin: 25px 10px 10px 0px;
     padding: 15px 20px;
@@ -596,7 +596,7 @@ footer span a:hover{
   }
   .home .home-content a {
     display: inline-block;
-    background-color: #5d8bf4;
+    background-color: #61677A;
     color: #fff;
     margin: 25px 10px 10px 0px;
     padding: 15px 20px;
@@ -641,7 +641,7 @@ footer span a:hover{
     margin: 20px 0;
   }
   .navbar .menu li a:hover {
-    color: #5d8bf4;
+    color: #61677A;
   }
   .home .home-content .text-2 {
     font-size: 70px;
@@ -651,7 +651,7 @@ footer span a:hover{
   }
   .home .home-content a {
     display: inline-block;
-    background-color: #5d8bf4;
+    background-color: #61677A;
     color: #fff;
     margin: 25px 10px 10px 0px;
     padding: 15px 20px;
@@ -697,7 +697,7 @@ footer span a:hover{
   }
   .home .home-content a {
     display: inline-block;
-    background-color: #5d8bf4;
+    background-color: #61677A;
     color: #fff;
     margin: 25px 10px 10px 0px;
     padding: 15px 20px;
@@ -721,7 +721,7 @@ footer span a:hover{
   }
   .home .home-content a {
     display: inline-block;
-    background-color: #5d8bf4;
+    background-color: #61677A;
     color: #fff;
     margin: 25px 10px 10px 0px;
     padding: 12px 16px;
