--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   text-decoration: none;
 }
-html{
+html {
   scroll-behavior: smooth;
 }
 /* Navbar Styling */
@@ -24,7 +24,7 @@ html{
 }
 .sticky {
   padding: 15px 0;
-  background: #61677A;
+  background: #61677a;
 }
 .navbar .max-width {
   display: flex;
@@ -37,7 +37,7 @@ html{
   font-size: 35px;
 }
 .navbar .logo a span {
-  color: #61677A;
+  color: #61677a;
   transition: all 0.3s ease;
 }
 .sticky .logo a span {
@@ -56,7 +56,7 @@ html{
   transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-  color: #61677A;
+  color: #61677a;
 }
 .sticky .menu li a:hover {
   color: #fff;
@@ -71,9 +71,9 @@ html{
   display: none;
 }
 
-.scroll-up-btn{
-  position:fixed;
-  background: #61677A;
+.scroll-up-btn {
+  position: fixed;
+  background: #61677a;
   height: 45px;
   width: 40px;
   right: 30px;
@@ -89,7 +89,7 @@ html{
   pointer-events: none;
   transition: all 0.3s ease;
 }
-.scroll-up-btn.show{
+.scroll-up-btn.show {
   bottom: 30px;
   opacity: 1;
   pointer-events: auto;
@@ -124,13 +124,13 @@ html{
 }
 .home .home-content a {
   display: inline-block;
-  background-color: #61677A;
+  background-color: #61677a;
   color: #fff;
   margin: 25px 10px 10px 0px;
   padding: 15px 20px;
   font-size: 23px;
   border-radius: 10px;
-  border: #61677A solid;
+  border: #61677a solid;
   transition: all 0.3s ease;
 }
 .home .home-content a:hover {
@@ -138,7 +138,7 @@ html{
   background: none;
 }
 .home .home-content .text-3 span {
-  color: #61677A;
+  color: #61677a;
   font-weight: 500;
 }
 
@@ -167,7 +167,7 @@ section .title::before {
 section .title::after {
   position: absolute;
   font-size: 20px;
-  color: #61677A;
+  color: #61677a;
   padding: 5px;
   bottom: -8px;
   left: 45.5%;
@@ -216,7 +216,7 @@ section {
   text-align: justify;
 }
 .about .about-content .right .text span {
-  color: #61677A;
+  color: #61677a;
 }
 
 /* My knowladge section styling */
@@ -257,14 +257,14 @@ section {
   transform: scale(1.05);
 }
 .knowladge .knowladge-content .cards:hover {
-  background-color: #61677A;
+  background-color: #61677a;
 }
 .knowladge .knowladge-content .cards:hover i {
   color: #fff;
 }
 .knowladge .knowladge-content .cards i {
   font-size: 40px;
-  color: #61677A;
+  color: #61677a;
   transition: all 0.3s ease;
 }
 .knowladge .knowladge-content .cards .text {
@@ -275,90 +275,89 @@ section {
 
 /* My skills styling */
 
-.skills{
+.skills {
   font-family: "Poppins", sans-serif;
 }
-.skills .skill-content{
+.skills .skill-content {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
-.skills .title::after{
+.skills .title::after {
   content: "How much";
 }
 
-.skills .skill-content .column{
+.skills .skill-content .column {
   width: calc(50% - 30px);
 }
-.skills .skill-content .left .text{
+.skills .skill-content .left .text {
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 10px;
 }
-.skills .skill-content .left p{
+.skills .skill-content .left p {
   text-align: justify;
 }
-.skills .skill-content .left a{
+.skills .skill-content .left a {
   display: inline-block;
-  background: #61677A;
+  background: #61677a;
   color: #fff;
   margin: 25px 10px 10px 0px;
   padding: 8px 13px;
   font-size: 15px;
   border-radius: 10px;
-  border: #61677A solid;
+  border: #61677a solid;
   transition: all 0.3s ease;
 }
-.skills .skill-content .left a:hover{
-  color: #61677A;
+.skills .skill-content .left a:hover {
+  color: #61677a;
   background: none;
 }
-.skills .skill-content .right .bars{
+.skills .skill-content .right .bars {
   margin-bottom: 15px;
 }
-.skills .skill-content .right .info{
+.skills .skill-content .right .info {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.skills .skill-content .right span{
+.skills .skill-content .right span {
   font-size: 18px;
   font-weight: 500;
 }
-.skills .skill-content .right .line{
+.skills .skill-content .right .line {
   height: 5px;
   width: 100%;
   background: lightblue;
   position: relative;
 }
-.skills .skill-content .right .line::before{
+.skills .skill-content .right .line::before {
   content: "";
   height: 100%;
   position: absolute;
-  background: #61677A;
+  background: #61677a;
   left: 0;
   top: 0;
 }
 
-
-.skill-content .right .HTML::before{
-   width: 80%;
-}
-.skill-content .right .CSS::before{
+.skill-content .right .HTML::before {
   width: 70%;
 }
-.skill-content .right .JavaScript::before{
-  width: 60%;
-}
-.skill-content .right .Flutter::before{
-  width: 40%;
-}
-.skill-content .right .DSA::before{
+.skill-content .right .CSS::before {
   width: 80%;
 }
+.skill-content .right .JavaScript::before {
+  width: 80%;
+}
+.skill-content .right .Flutter::before {
+  width: 60%;
+}
 .skill-content .right .MERN::before {
+  width: 60%;
+}
+.skill-content .right .DSA::before {
   width: 70%;
 }
 
@@ -371,129 +370,130 @@ section {
   color: #fff;
   background-color: #111;
 }
-.projects .carousel .card{
-background-color: #222;
-border-radius: 6px;
-padding: 25px 35px;
-text-align: center;
-transition: all 0.3s ease;
+.projects .carousel .card {
+  background-color: #222;
+  border-radius: 6px;
+  padding: 25px 35px;
+  text-align: center;
+  transition: all 0.3s ease;
 }
-.projects .carousel .card .box{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   transition: all 0.3s ease;
+.projects .carousel .card .box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease;
 }
-.projects .carousel .card:hover .box{
+.projects .carousel .card:hover .box {
   transform: scale(1.05);
 }
-.projects .carousel .card:hover{
-  background: #61677A;
+.projects .carousel .card:hover {
+  background: #61677a;
 }
-.projects .carousel .card .text{
+.projects .carousel .card .text {
   font-size: 25px;
   font-weight: 500;
   margin: 10px 0px 7px 0px;
 }
-.projects .carousel .card img{
- height: 150px;
- width: 150px;
- object-fit: cover;
- border-radius: 50%;
- border: 5px solid #61677A;
- transition: all 0.3s ease;
-
+.projects .carousel .card img {
+  height: 150px;
+  width: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 5px solid #61677a;
+  transition: all 0.3s ease;
 }
-.projects .carousel .card:hover img{
+.projects .carousel .card:hover img {
   border-color: #fff;
 }
 
-.owl-dots{
+.owl-dots {
   text-align: center;
   margin-top: 20px;
 }
-.owl-dot{
+.owl-dot {
   height: 13px;
   width: 13px;
-  outline: none!important;
+  outline: none !important;
   margin: 0px 5px;
   border-radius: 50%;
-  border: 2px solid #61677A!important;
+  border: 2px solid #61677a !important;
   transition: all 0.3s ease;
 }
-.owl-dot.active{
+.owl-dot.active {
   width: 35px;
   border-radius: 14px;
 }
-.owl-dot.active,.owl-dot:hover{
-   background: #61677A!important;
+.owl-dot.active,
+.owl-dot:hover {
+  background: #61677a !important;
 }
 
 /* contact styling */
 .contact {
   font-family: "Poppins", sans-serif;
 }
-.contact .contact-content{
+.contact .contact-content {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
-.contact .contact-content .column{
+.contact .contact-content .column {
   width: calc(50% - 30px);
 }
-.contact .contact-content .text{
+.contact .contact-content .text {
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 10px;
 }
-.contact .contact-content .left p{
-text-align: justify;
+.contact .contact-content .left p {
+  text-align: justify;
 }
-.contact .contact-content .left .icons{
- margin: 10px 0px;
+.contact .contact-content .left .icons {
+  margin: 10px 0px;
 }
-.contact .contact-content .row{
+.contact .contact-content .row {
   display: flex;
   height: 65px;
   align-items: center;
 }
-.contact .contact-content .row .info{
+.contact .contact-content .row .info {
   margin-left: 30px;
 }
-.contact .contact-content .info i{
+.contact .contact-content .info i {
   font-size: 25px;
-  color: #61677A;
+  color: #61677a;
 }
-.contact .contact-content .info .head{
-font-weight: 500;
+.contact .contact-content .info .head {
+  font-weight: 500;
 }
-.contact .contact-content .info .sub-title{
+.contact .contact-content .info .sub-title {
   color: #333;
 }
-.contact .right form .fields{
-display: flex;
+.contact .right form .fields {
+  display: flex;
 }
 
 .contact .right form .field,
-.contact .right form .fields .field{
+.contact .right form .fields .field {
   height: 45px;
   width: 100%;
   margin-bottom: 15px;
 }
 
-.contact .right form .textarea{
+.contact .right form .textarea {
   height: 80px;
   width: 100%;
 }
-.contact .right form .name{
+.contact .right form .name {
   margin-right: 10px;
- }
- .contact .right form .email{
-   margin-left: 10px;
- }
-.contact .right form .field input,.contact .right form .textarea textarea{
+}
+.contact .right form .email {
+  margin-left: 10px;
+}
+.contact .right form .field input,
+.contact .right form .textarea textarea {
   height: 100%;
   width: 100%;
   border: 1px solid lightgray;
@@ -503,19 +503,19 @@ display: flex;
   font-size: 17px;
   font-family: "Poppins", sans-serif;
 }
-.contact .right form .textarea{
+.contact .right form .textarea {
   padding-top: 10px;
   resize: none;
 }
-.contact .right form .button{
+.contact .right form .button {
   height: 47px;
   width: 170px;
 }
-.contact .right form .button button{
+.contact .right form .button button {
   height: 100%;
   width: 100%;
-  border: 2px solid #61677A;
-  background:#61677A ;
+  border: 2px solid #61677a;
+  background: #61677a;
   color: #fff;
   font-size: 20px;
   font-weight: 500;
@@ -523,17 +523,17 @@ display: flex;
   cursor: pointer;
   transition: all 0.3s ease;
 }
- .link {
-   position: absolute;
-   width: 100%;
-   height: 100%;
-   top: 0;
-   left: 0;
-   z-index: 1;
- }
-.contact .right form .button button:hover{
-  color: #61677A;
-  background:none;
+.link {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.contact .right form .button button:hover {
+  color: #61677a;
+  background: none;
 }
 
 /* footer section style */
@@ -541,23 +541,20 @@ display: flex;
 footer {
   font-family: "Poppins", sans-serif;
 }
-footer{
+footer {
   background: #111;
   padding: 20px 23px;
   color: #fff;
   text-align: center;
 }
 
-footer span a{
-  color: #61677A;
+footer span a {
+  color: #61677a;
 }
 
-footer span a:hover{
+footer span a:hover {
   text-decoration: underline;
 }
-
-
-
 
 /* responsive media query section */
 
@@ -581,7 +578,7 @@ footer span a:hover{
   }
   .home .home-content a {
     display: inline-block;
-    background-color: #61677A;
+    background-color: #61677a;
     color: #fff;
     margin: 25px 10px 10px 0px;
     padding: 15px 20px;
@@ -589,7 +586,6 @@ footer span a:hover{
     border-radius: 10px;
   }
 }
-
 
 /* max-width: 991px */
 
@@ -599,7 +595,7 @@ footer span a:hover{
   }
   .home .home-content a {
     display: inline-block;
-    background-color: #61677A;
+    background-color: #61677a;
     color: #fff;
     margin: 25px 10px 10px 0px;
     padding: 15px 20px;
@@ -644,7 +640,7 @@ footer span a:hover{
     margin: 20px 0;
   }
   .navbar .menu li a:hover {
-    color: #61677A;
+    color: #61677a;
   }
   .home .home-content .text-2 {
     font-size: 70px;
@@ -654,7 +650,7 @@ footer span a:hover{
   }
   .home .home-content a {
     display: inline-block;
-    background-color: #61677A;
+    background-color: #61677a;
     color: #fff;
     margin: 25px 10px 10px 0px;
     padding: 15px 20px;
@@ -680,8 +676,8 @@ footer span a:hover{
     margin: 20px 0 20px 0;
   }
   .skills .skill-content .column,
-  .contact .contact-content .column{
-    width: 100% ;
+  .contact .contact-content .column {
+    width: 100%;
     margin-bottom: 20px;
   }
 }
@@ -700,7 +696,7 @@ footer span a:hover{
   }
   .home .home-content a {
     display: inline-block;
-    background-color: #61677A;
+    background-color: #61677a;
     color: #fff;
     margin: 25px 10px 10px 0px;
     padding: 15px 20px;
@@ -724,7 +720,7 @@ footer span a:hover{
   }
   .home .home-content a {
     display: inline-block;
-    background-color: #61677A;
+    background-color: #61677a;
     color: #fff;
     margin: 25px 10px 10px 0px;
     padding: 12px 16px;
